EPMRPP-114707 merge commons-dao