@@ -24,13 +24,14 @@ import com.epam.reportportal.base.infrastructure.persistence.filesystem.DataStor
 import java.io.InputStream;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * Base implementation wiring {@link DataStore} and {@link DataEncoder} for a binary use case.
  *
  * @author <a href="mailto:ihar_kahadouski@epam.com">Ihar Kahadouski</a>
  */
+@Slf4j
 public abstract class CommonDataStoreService implements DataStoreService {
 
   protected DataStore dataStore;
@@ -57,8 +58,10 @@ public abstract class CommonDataStoreService implements DataStoreService {
 
   @Override
   public void deleteAll(List<String> fileIds, String bucketName) {
-    dataStore.deleteAll(
-        fileIds.stream().map(dataEncoder::decode).collect(Collectors.toList()), bucketName);
+    var decodedPaths = fileIds.stream()
+        .map(dataEncoder::decode)
+        .toList();
+    dataStore.deleteAll(decodedPaths, bucketName);
   }
 
   @Override
